[MacOS] Host fails to curtain session in headless mode

This issue is due to a limitation in the tool used to curtain the
session (CGSession).  This is a known limitation which has existed
for at least 10 years.  Due to this platform problem, we cannot
ensure success when in headless mode (in fact it is practically
guaranteed to fail).  My approach is to still try to curtain but
disconnect the session with a host configuration error if it is
running headless.  If CGSession somehow succeeds, then the session
will be curtained and the user can reconnect and the second
attempt will succeed.

Note that I am not adding a new error code for this condition yet.
I'd like to avoid updating the web app / other clients until we
know how often users actually encounter this issue.

BUG=832748

Change-Id: Ic07c280b19d9dc44e290585e1a16bae835d37851
Reviewed-on: https://chromium-review.googlesource.com/1153560
Commit-Queue: Joe Downing <joedow@chromium.org>
Reviewed-by: Jamie Walch <jamiewalch@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579059}
Former-commit-id: 294830ad3342098b682e7c2b2960fece809782ac